Add underscores to remaining languages

--- a/src/freenet/l10n/freenet.l10n.da.properties
+++ b/src/freenet/l10n/freenet.l10n.da.properties
@@ -1,13 +1,13 @@
 ConnectionsToadlet.nodeStatus.BUSY=OPTAGET
 ConnectionsToadlet.nodeStatus.CONNECTED=FORBUNDET
-ConnectionsToadlet.nodeStatus.CONNECTION ERROR=FORBINDELSES FEJL
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=FORBINDELSES FEJL
 ConnectionsToadlet.nodeStatus.DISABLED=SLÅET FRA
 ConnectionsToadlet.nodeStatus.DISCONNECTED=AFBRUDT
 ConnectionsToadlet.nodeStatus.DISCONNECTING=AFBRYDER
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=ALDRIG FORBUNDET
-ConnectionsToadlet.nodeStatus.TOO NEW=FOR NY
-ConnectionsToadlet.nodeStatus.TOO OLD=FOR GAMMEL
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=UKENDT STATUS
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=ALDRIG FORBUNDET
+ConnectionsToadlet.nodeStatus.TOO_NEW=FOR NY
+ConnectionsToadlet.nodeStatus.TOO_OLD=FOR GAMMEL
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=UKENDT STATUS
 ContentDataFilter.unknownCharset=Siden du er ved at åbne har et ukendt karakter sæt. Det betyder at noden ikke kan filtrere indholdet og at det derfor måske kan kompromitere din anonymitet.
 ContentDataFilter.unknownCharsetTitle=Ukendt karakter sæt!
 ContentDataFilter.warningUnknownCharsetTitle=Advarsel: Ukendt karakter sæt (${charset})
