--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -222,22 +222,22 @@ ConnectivityToadlet.status.MAYBE_NATED=Befindet sich vielleicht hinter einer NAT
 ConnectivityToadlet.status.DEFINITELY_NATED=Befindet sich definitiv hinter einer NAT
 ConnectivityToadlet.status.DONT_KNOW=Status unbekannt
 ConnectionsToadlet.nodeStatus.CONNECTED=VERBUNDEN
-ConnectionsToadlet.nodeStatus.BACKED OFF=ABGEWIESEN
-ConnectionsToadlet.nodeStatus.NO LOAD STATS=NO LOAD STATS
-ConnectionsToadlet.nodeStatus.TOO NEW=ZU NEU
-ConnectionsToadlet.nodeStatus.TOO NEW=ZU NEU
+ConnectionsToadlet.nodeStatus.BACKED_OFF=ABGEWIESEN
+ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=NO LOAD STATS
+ConnectionsToadlet.nodeStatus.TOO_NEW=ZU NEU
+ConnectionsToadlet.nodeStatus.TOO_NEW=ZU NEU
 ConnectionsToadlet.nodeStatus.DISCONNECTED=NICHT VERBUNDEN
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=NOCH NIE VERBUNDEN
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=NOCH NIE VERBUNDEN
 ConnectionsToadlet.nodeStatus.DISABLED=DEAKTIVIERT
-ConnectionsToadlet.nodeStatus.LISTEN ONLY=NUR LAUSCHEN
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=NUR LAUSCHEN
 ConnectionsToadlet.nodeStatus.LISTENING=LAUSCHEND
 ConnectionsToadlet.nodeStatus.BURSTING=BURSTING
-ConnectionsToadlet.nodeStatus.CLOCK PROBLEM=UHRZEIT-PROBLEM
-ConnectionsToadlet.nodeStatus.CONNECTION ERROR=VERBINDUNGSFEHLER
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=UHRZEIT-PROBLEM
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=VERBINDUNGSFEHLER
 ConnectionsToadlet.nodeStatus.DISCONNECTING=TRENNE VERBINDUNG
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=UNBEKANNTER STATUS
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=UNBEKANNTER STATUS
 ConnectionsToadlet.nodeStatus.BUSY=BESCHÄFTIGT
-ConnectionsToadlet.nodeStatus.ROUTING DISABLED=LEITET VERKEHR NICHT WEITER
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=LEITET VERKEHR NICHT WEITER
 ContentDataFilter.unknownCharset=Die Seite, die Sie ansehen wollen, hat einen unbekannten Zeichensatz. Das heißt, dass wir nicht die Möglichkeit haben, die Seite zu filtern und es kann sein, dass dies Ihre Anonymität gefährdet.
 ContentDataFilter.unknownCharsetTitle=Unbekannter Zeichensatz!
 ContentDataFilter.warningUnknownCharsetTitle=Warnung: Unbekannter Zeichensatz (${charset})
