--- a/src/freenet/l10n/freenet.l10n.es.properties
+++ b/src/freenet/l10n/freenet.l10n.es.properties
@@ -222,22 +222,22 @@ ConnectivityToadlet.status.MAYBE_NATED=Puede que detrás de NAT
 ConnectivityToadlet.status.DEFINITELY_NATED=Detrás de NAT
 ConnectivityToadlet.status.DONT_KNOW=Estado desconocido
 ConnectionsToadlet.nodeStatus.CONNECTED=CONECTADO
-ConnectionsToadlet.nodeStatus.BACKED OFF=BACKED OFF
-ConnectionsToadlet.nodeStatus.NO LOAD STATS=NO LOAD STATS
-ConnectionsToadlet.nodeStatus.TOO NEW=MUY NUEVO
-ConnectionsToadlet.nodeStatus.TOO NEW=MUY NUEVO
+ConnectionsToadlet.nodeStatus.BACKED_OFF=BACKED OFF
+ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=NO LOAD STATS
+ConnectionsToadlet.nodeStatus.TOO_NEW=MUY NUEVO
+ConnectionsToadlet.nodeStatus.TOO_NEW=MUY NUEVO
 ConnectionsToadlet.nodeStatus.DISCONNECTED=DESCONECTADO
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=NUNCA CONECTADO
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=NUNCA CONECTADO
 ConnectionsToadlet.nodeStatus.DISABLED=DESACTIVADO
-ConnectionsToadlet.nodeStatus.LISTEN ONLY=LISTEN ONLY
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=LISTEN ONLY
 ConnectionsToadlet.nodeStatus.LISTENING=ESCUCHANDO
 ConnectionsToadlet.nodeStatus.BURSTING=BURSTING
-ConnectionsToadlet.nodeStatus.CLOCK PROBLEM=PROBLEMA DE RELOJ
-ConnectionsToadlet.nodeStatus.CONNECTION ERROR=ERROR DE CONECCIÓN
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=PROBLEMA DE RELOJ
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=ERROR DE CONECCIÓN
 ConnectionsToadlet.nodeStatus.DISCONNECTING=DESCONECTANDO
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=ESTADO DESCONOCIDO
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=ESTADO DESCONOCIDO
 ConnectionsToadlet.nodeStatus.BUSY=OCUPADO
-ConnectionsToadlet.nodeStatus.ROUTING DISABLED=NOT ROUTING TRAFFIC
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=NOT ROUTING TRAFFIC
 ContentDataFilter.unknownCharset=La página que se va a mostrar tiene un juego de caracteres desconocido. Esto significa que no se ha podido filtrar la página, lo cual puede comprometer su anonimato.
 ContentDataFilter.unknownCharsetTitle=¡Juego de caracteres desconocido!
 ContentDataFilter.warningUnknownCharsetTitle=Atención: juego de caracteres desconocido (${charset})
