--- a/src/freenet/l10n/freenet.l10n.fi.properties
+++ b/src/freenet/l10n/freenet.l10n.fi.properties
@@ -222,22 +222,22 @@ ConnectivityToadlet.status.MAYBE_NATED=Maybe behind NAT
 ConnectivityToadlet.status.DEFINITELY_NATED=Behind NAT
 ConnectivityToadlet.status.DONT_KNOW=Status unknown
 ConnectionsToadlet.nodeStatus.CONNECTED=YHDISTETTY
-ConnectionsToadlet.nodeStatus.BACKED OFF=SAAVUTTAMATTOMISSA
-ConnectionsToadlet.nodeStatus.NO LOAD STATS=NO LOAD STATS
-ConnectionsToadlet.nodeStatus.TOO NEW=LIIAN UUSI
-ConnectionsToadlet.nodeStatus.TOO NEW=LIIAN UUSI
+ConnectionsToadlet.nodeStatus.BACKED_OFF=SAAVUTTAMATTOMISSA
+ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=NO LOAD STATS
+ConnectionsToadlet.nodeStatus.TOO_NEW=LIIAN UUSI
+ConnectionsToadlet.nodeStatus.TOO_NEW=LIIAN UUSI
 ConnectionsToadlet.nodeStatus.DISCONNECTED=KATKENNUT
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=EI IKINÄ YHDISTETTY
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=EI IKINÄ YHDISTETTY
 ConnectionsToadlet.nodeStatus.DISABLED=POIS KÄYTÖSTÄ
-ConnectionsToadlet.nodeStatus.LISTEN ONLY=VAIN KUUNNELTAVA
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=VAIN KUUNNELTAVA
 ConnectionsToadlet.nodeStatus.LISTENING=KUUNTELEE
 ConnectionsToadlet.nodeStatus.BURSTING=HALKEILEE
-ConnectionsToadlet.nodeStatus.CLOCK PROBLEM=KELLO-ONGELMA
-ConnectionsToadlet.nodeStatus.CONNECTION ERROR=YHTEYSVIRHE
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=KELLO-ONGELMA
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=YHTEYSVIRHE
 ConnectionsToadlet.nodeStatus.DISCONNECTING=SULKEE YHTEYTTÄ
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=TUNTEMATON TILA
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=TUNTEMATON TILA
 ConnectionsToadlet.nodeStatus.BUSY=VARATTU
-ConnectionsToadlet.nodeStatus.ROUTING DISABLED=EI REITITÄ LIIKENNETTÄ
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=EI REITITÄ LIIKENNETTÄ
 ContentDataFilter.unknownCharset=Sivula, jota olet aikeissa näyttää, käytetään tunnistamatonta merkistöä. Tämä tarkoittaa, ettemme kykene suodattamaan sivua, ja se voi vahingoittaa yksityisyyttäsi.
 ContentDataFilter.unknownCharsetTitle=Tuntematon merkistö!
 ContentDataFilter.warningUnknownCharsetTitle=Varoitus: Tuntematon merkistö (${charset})
