--- a/src/freenet/l10n/freenet.l10n.ja.properties
+++ b/src/freenet/l10n/freenet.l10n.ja.properties
@@ -222,22 +222,22 @@ ConnectivityToadlet.status.MAYBE_NATED=おそらくNATの後ろ
 ConnectivityToadlet.status.DEFINITELY_NATED=NATの後ろ
 ConnectivityToadlet.status.DONT_KNOW=状況不明
 ConnectionsToadlet.nodeStatus.CONNECTED=接続
-ConnectionsToadlet.nodeStatus.BACKED OFF=接続撤回
-ConnectionsToadlet.nodeStatus.NO LOAD STATS=負荷統計無し
-ConnectionsToadlet.nodeStatus.TOO NEW=新しすぎ
-ConnectionsToadlet.nodeStatus.TOO NEW=新しすぎ
+ConnectionsToadlet.nodeStatus.BACKED_OFF=接続撤回
+ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=負荷統計無し
+ConnectionsToadlet.nodeStatus.TOO_NEW=新しすぎ
+ConnectionsToadlet.nodeStatus.TOO_NEW=新しすぎ
 ConnectionsToadlet.nodeStatus.DISCONNECTED=接続解除
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=接続されたことがない
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=接続されたことがない
 ConnectionsToadlet.nodeStatus.DISABLED=無効
-ConnectionsToadlet.nodeStatus.LISTEN ONLY=聴き取りのみ
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=聴き取りのみ
 ConnectionsToadlet.nodeStatus.LISTENING=リスニング
 ConnectionsToadlet.nodeStatus.BURSTING=バースト中
-ConnectionsToadlet.nodeStatus.CLOCK PROBLEM=時刻に問題
-ConnectionsToadlet.nodeStatus.CONNECTION ERROR=接続エラー
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=時刻に問題
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=接続エラー
 ConnectionsToadlet.nodeStatus.DISCONNECTING=接続を解除中
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=状況不明
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=状況不明
 ConnectionsToadlet.nodeStatus.BUSY=ビジー
-ConnectionsToadlet.nodeStatus.ROUTING DISABLED=ルーティングでないトラフィック
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=ルーティングでないトラフィック
 ContentDataFilter.unknownCharset=あなたが表示しようとしているページには未知の文字セットがあります。これはページをフィルタリングすることができないことを意味し、あなたの匿名性を損なう可能性があります。
 ContentDataFilter.unknownCharsetTitle=不明な文字セット
 ContentDataFilter.warningUnknownCharsetTitle=警告: 不明な文字セット (${charset})
