--- a/src/freenet/l10n/freenet.l10n.nl.properties
+++ b/src/freenet/l10n/freenet.l10n.nl.properties
@@ -222,22 +222,22 @@ ConnectivityToadlet.status.MAYBE_NATED=Misschien achter een NAT
 ConnectivityToadlet.status.DEFINITELY_NATED=Achter NAT
 ConnectivityToadlet.status.DONT_KNOW=Status onbekend
 ConnectionsToadlet.nodeStatus.CONNECTED=VERBONDEN
-ConnectionsToadlet.nodeStatus.BACKED OFF=Teruggetreden
-ConnectionsToadlet.nodeStatus.NO LOAD STATS=NO LOAD STATS
-ConnectionsToadlet.nodeStatus.TOO NEW=TE NIEUW
-ConnectionsToadlet.nodeStatus.TOO NEW=TE NIEUW
+ConnectionsToadlet.nodeStatus.BACKED_OFF=Teruggetreden
+ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=NO LOAD STATS
+ConnectionsToadlet.nodeStatus.TOO_NEW=TE NIEUW
+ConnectionsToadlet.nodeStatus.TOO_NEW=TE NIEUW
 ConnectionsToadlet.nodeStatus.DISCONNECTED=VERBINDING VERBROKEN
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=NOOIT VERBONDEN
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=NOOIT VERBONDEN
 ConnectionsToadlet.nodeStatus.DISABLED=UITGESCHAKELD
-ConnectionsToadlet.nodeStatus.LISTEN ONLY=ALLEEN LUISTEREN
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=ALLEEN LUISTEREN
 ConnectionsToadlet.nodeStatus.LISTENING=WACHT OP VERBINDING
 ConnectionsToadlet.nodeStatus.BURSTING=BURSTING
-ConnectionsToadlet.nodeStatus.CLOCK PROBLEM=TIJDPROBLEEM
-ConnectionsToadlet.nodeStatus.CONNECTION ERROR=VERBINDINGSFOUT
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=TIJDPROBLEEM
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=VERBINDINGSFOUT
 ConnectionsToadlet.nodeStatus.DISCONNECTING=VERBINDING WORDT VERBROKEN
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=ONBEKENDE STATUS
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=ONBEKENDE STATUS
 ConnectionsToadlet.nodeStatus.BUSY=BEZIG
-ConnectionsToadlet.nodeStatus.ROUTING DISABLED=GEEN VERKEER DOORSTUREN
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=GEEN VERKEER DOORSTUREN
 ContentDataFilter.unknownCharset=De pagina die je probeert weer te geven bevat een onbekende karakterset. Dit betekent dat Freenet de pagina niet kan filteren. Dit heeft mogelijk gevolgen voor je anonimiteit.
 ContentDataFilter.unknownCharsetTitle=Onbekende karakterset!
 ContentDataFilter.warningUnknownCharsetTitle=Waarschuwing: Onbekende karakterset: (${charset})
