--- a/src/freenet/l10n/freenet.l10n.no.properties
+++ b/src/freenet/l10n/freenet.l10n.no.properties
@@ -222,22 +222,22 @@ ConnectivityToadlet.status.MAYBE_NATED=Maybe behind NAT
 ConnectivityToadlet.status.DEFINITELY_NATED=Behind NAT
 ConnectivityToadlet.status.DONT_KNOW=Status unknown
 ConnectionsToadlet.nodeStatus.CONNECTED=TILKOPLET
-ConnectionsToadlet.nodeStatus.BACKED OFF=OPPTATT
-ConnectionsToadlet.nodeStatus.NO LOAD STATS=NO LOAD STATS
-ConnectionsToadlet.nodeStatus.TOO NEW=FOR NY
-ConnectionsToadlet.nodeStatus.TOO NEW=FOR NY
+ConnectionsToadlet.nodeStatus.BACKED_OFF=OPPTATT
+ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=NO LOAD STATS
+ConnectionsToadlet.nodeStatus.TOO_NEW=FOR NY
+ConnectionsToadlet.nodeStatus.TOO_NEW=FOR NY
 ConnectionsToadlet.nodeStatus.DISCONNECTED=FRAKOPLET
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=ALDRI TILKOPLET
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=ALDRI TILKOPLET
 ConnectionsToadlet.nodeStatus.DISABLED=DEAKTIVERT
-ConnectionsToadlet.nodeStatus.LISTEN ONLY=BARE LYTT
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=BARE LYTT
 ConnectionsToadlet.nodeStatus.LISTENING=LYTTER
 ConnectionsToadlet.nodeStatus.BURSTING=BURSTING
-ConnectionsToadlet.nodeStatus.CLOCK PROBLEM=KLOKKEPROBLEM
-ConnectionsToadlet.nodeStatus.CONNECTION ERROR=TILKOPLINGSFEIL
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=KLOKKEPROBLEM
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=TILKOPLINGSFEIL
 ConnectionsToadlet.nodeStatus.DISCONNECTING=KOBLER FRA
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=UKJENT STATUS
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=UKJENT STATUS
 ConnectionsToadlet.nodeStatus.BUSY=OPPTATT
-ConnectionsToadlet.nodeStatus.ROUTING DISABLED=NOT ROUTING TRAFFIC
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=NOT ROUTING TRAFFIC
 ContentDataFilter.unknownCharset=Siden du er i ferd med å vise har et ukjent tegnsett. Det betyr at vi ikke kan filtrere siden, og den kan kompromittere anonymiteten din.
 ContentDataFilter.unknownCharsetTitle=Ukjent tegnsett!
 ContentDataFilter.warningUnknownCharsetTitle=Advarsel: Ukjent tegnsett (${charset})
