--- a/src/freenet/l10n/freenet.l10n.pt-br.properties
+++ b/src/freenet/l10n/freenet.l10n.pt-br.properties
@@ -222,22 +222,22 @@ ConnectivityToadlet.status.MAYBE_NATED=Talvez esteja atrás de um NAT
 ConnectivityToadlet.status.DEFINITELY_NATED=Atrás de um NAT
 ConnectivityToadlet.status.DONT_KNOW=Estado desconhecido
 ConnectionsToadlet.nodeStatus.CONNECTED=CONECTADO
-ConnectionsToadlet.nodeStatus.BACKED OFF=BACKED OFF
-ConnectionsToadlet.nodeStatus.NO LOAD STATS=NO LOAD STATS
-ConnectionsToadlet.nodeStatus.TOO NEW=TOO NEW
-ConnectionsToadlet.nodeStatus.TOO NEW=TOO NEW
+ConnectionsToadlet.nodeStatus.BACKED_OFF=BACKED OFF
+ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=NO LOAD STATS
+ConnectionsToadlet.nodeStatus.TOO_NEW=TOO NEW
+ConnectionsToadlet.nodeStatus.TOO_NEW=TOO NEW
 ConnectionsToadlet.nodeStatus.DISCONNECTED=DESCONECTADO
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=NEVER CONNECTED
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=NEVER CONNECTED
 ConnectionsToadlet.nodeStatus.DISABLED=DESABILITADO
-ConnectionsToadlet.nodeStatus.LISTEN ONLY=LISTEN ONLY
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=LISTEN ONLY
 ConnectionsToadlet.nodeStatus.LISTENING=OUVINDO
 ConnectionsToadlet.nodeStatus.BURSTING=LOTADO
-ConnectionsToadlet.nodeStatus.CLOCK PROBLEM=CLOCK PROBLEM
-ConnectionsToadlet.nodeStatus.CONNECTION ERROR=CONNECTION ERROR
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=CLOCK PROBLEM
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=CONNECTION ERROR
 ConnectionsToadlet.nodeStatus.DISCONNECTING=DESCONECTANDO-SE
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=UNKNOWN STATUS
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=UNKNOWN STATUS
 ConnectionsToadlet.nodeStatus.BUSY=CONGESTIONADO
-ConnectionsToadlet.nodeStatus.ROUTING DISABLED=NOT ROUTING TRAFFIC
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=NOT ROUTING TRAFFIC
 ContentDataFilter.unknownCharset=A página que era para ser mostrada possui um conjunto de caractéres desconhecido. Isto significa que não estamos aptos a filtrar a página, o que pode comprometer o seu anonimato.
 ContentDataFilter.unknownCharsetTitle=Conjunto de caractéres desconhecido!
 ContentDataFilter.warningUnknownCharsetTitle=Aviso: conjunto de caractéres desconhecido (${charset})
