--- a/src/freenet/l10n/freenet.l10n.ru.properties
+++ b/src/freenet/l10n/freenet.l10n.ru.properties
@@ -222,22 +222,22 @@ ConnectivityToadlet.status.MAYBE_NATED=Возможно, находится за
 ConnectivityToadlet.status.DEFINITELY_NATED=Находится за NAT
 ConnectivityToadlet.status.DONT_KNOW=Статус неизвестен
 ConnectionsToadlet.nodeStatus.CONNECTED=ПОДКЛЮЧЕН
-ConnectionsToadlet.nodeStatus.BACKED OFF=НЕ ОТВЕЧАЕТ
-ConnectionsToadlet.nodeStatus.NO LOAD STATS=НЕТ ДАННЫХ ПО ЗАГРУЗКЕ
-ConnectionsToadlet.nodeStatus.TOO NEW=СЛИШКОМ НОВЫЙ
-ConnectionsToadlet.nodeStatus.TOO NEW=СЛИШКОМ НОВЫЙ
+ConnectionsToadlet.nodeStatus.BACKED_OFF=НЕ ОТВЕЧАЕТ
+ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=НЕТ ДАННЫХ ПО ЗАГРУЗКЕ
+ConnectionsToadlet.nodeStatus.TOO_NEW=СЛИШКОМ НОВЫЙ
+ConnectionsToadlet.nodeStatus.TOO_NEW=СЛИШКОМ НОВЫЙ
 ConnectionsToadlet.nodeStatus.DISCONNECTED=НЕ ПОДКЛЮЧЕН
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=НЕ ПОДКЛЮЧАЛСЯ
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=НЕ ПОДКЛЮЧАЛСЯ
 ConnectionsToadlet.nodeStatus.DISABLED=ОТКЛЮЧЕН
-ConnectionsToadlet.nodeStatus.LISTEN ONLY=ТОЛЬКО ПРОСЛУШИВАНИЕ
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=ТОЛЬКО ПРОСЛУШИВАНИЕ
 ConnectionsToadlet.nodeStatus.LISTENING=ПРОСЛУШИВАНИЕ
 ConnectionsToadlet.nodeStatus.BURSTING=РАЗРЫВ
-ConnectionsToadlet.nodeStatus.CLOCK PROBLEM=С НЕПРАВИЛЬНЫМ ВРЕМЕНЕМ
-ConnectionsToadlet.nodeStatus.CONNECTION ERROR=ОШИБКА СОЕДИНЕНИЯ
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=С НЕПРАВИЛЬНЫМ ВРЕМЕНЕМ
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=ОШИБКА СОЕДИНЕНИЯ
 ConnectionsToadlet.nodeStatus.DISCONNECTING=РАЗЪЕДИНЕНИЕ
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=СТАТУС НЕИЗВЕСТЕН
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=СТАТУС НЕИЗВЕСТЕН
 ConnectionsToadlet.nodeStatus.BUSY=НЕ ОТВЕЧАЕТ
-ConnectionsToadlet.nodeStatus.ROUTING DISABLED=НЕТ ПЕРЕДАЧИ ДАННЫХ
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=НЕТ ПЕРЕДАЧИ ДАННЫХ
 ContentDataFilter.unknownCharset=Страница, которую вы хотите просмотреть, содержит неизвестную кодировку. Это значит что мы не можем отфильтровать ее содержимое, которое может нанести вред вашей анонимности.
 ContentDataFilter.unknownCharsetTitle=Неизвестная кодировка!
 ContentDataFilter.warningUnknownCharsetTitle=Предупреждение: неизвестная кодировка (${charset})
