--- a/src/freenet/l10n/freenet.l10n.zh-tw.properties
+++ b/src/freenet/l10n/freenet.l10n.zh-tw.properties
@@ -222,22 +222,22 @@ ConnectivityToadlet.status.MAYBE_NATED=Maybe behind NAT
 ConnectivityToadlet.status.DEFINITELY_NATED=Behind NAT
 ConnectivityToadlet.status.DONT_KNOW=Status unknown
 ConnectionsToadlet.nodeStatus.CONNECTED=已連線
-ConnectionsToadlet.nodeStatus.BACKED OFF=被疏遠
-ConnectionsToadlet.nodeStatus.NO LOAD STATS=NO LOAD STATS
-ConnectionsToadlet.nodeStatus.TOO NEW=過新
-ConnectionsToadlet.nodeStatus.TOO NEW=過新
+ConnectionsToadlet.nodeStatus.BACKED_OFF=被疏遠
+ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=NO LOAD STATS
+ConnectionsToadlet.nodeStatus.TOO_NEW=過新
+ConnectionsToadlet.nodeStatus.TOO_NEW=過新
 ConnectionsToadlet.nodeStatus.DISCONNECTED=已斷線
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=未曾連線
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=未曾連線
 ConnectionsToadlet.nodeStatus.DISABLED=已停用
-ConnectionsToadlet.nodeStatus.LISTEN ONLY=只傾聽
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=只傾聽
 ConnectionsToadlet.nodeStatus.LISTENING=傾聽中
 ConnectionsToadlet.nodeStatus.BURSTING=爆發中
-ConnectionsToadlet.nodeStatus.CLOCK PROBLEM=時鐘問題
-ConnectionsToadlet.nodeStatus.CONNECTION ERROR=連線錯誤
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=時鐘問題
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=連線錯誤
 ConnectionsToadlet.nodeStatus.DISCONNECTING=斷線中
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=狀況不明
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=狀況不明
 ConnectionsToadlet.nodeStatus.BUSY=忙碌中
-ConnectionsToadlet.nodeStatus.ROUTING DISABLED=不安排路線
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=不安排路線
 ContentDataFilter.unknownCharset=你想要顯示的頁面使用了不明的字元集. 這表示我們無法對這個頁面進行過濾, 而它可能會危害你的匿名性.
 ContentDataFilter.unknownCharsetTitle=不明字元集!
 ContentDataFilter.warningUnknownCharsetTitle=警告: 不明的字元集 (${charset})
