--- a/src/freenet/l10n/freenet.l10n.sv.properties
+++ b/src/freenet/l10n/freenet.l10n.sv.properties
@@ -222,22 +222,22 @@ ConnectivityToadlet.status.MAYBE_NATED=Maybe behind NAT
 ConnectivityToadlet.status.DEFINITELY_NATED=Behind NAT
 ConnectivityToadlet.status.DONT_KNOW=Status unknown
 ConnectionsToadlet.nodeStatus.CONNECTED=ANSLUTEN
-ConnectionsToadlet.nodeStatus.BACKED OFF=UPPTAGEN
-ConnectionsToadlet.nodeStatus.NO LOAD STATS=NO LOAD STATS
-ConnectionsToadlet.nodeStatus.TOO NEW=FÖR NY
-ConnectionsToadlet.nodeStatus.TOO NEW=FÖR NY
+ConnectionsToadlet.nodeStatus.BACKED_OFF=UPPTAGEN
+ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=NO LOAD STATS
+ConnectionsToadlet.nodeStatus.TOO_NEW=FÖR NY
+ConnectionsToadlet.nodeStatus.TOO_NEW=FÖR NY
 ConnectionsToadlet.nodeStatus.DISCONNECTED=FRÅNKOPPLAD
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=ALDRIG ANSLUTEN
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=ALDRIG ANSLUTEN
 ConnectionsToadlet.nodeStatus.DISABLED=AVSTÄNGD
-ConnectionsToadlet.nodeStatus.LISTEN ONLY=ENDAST LYSSNA
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=ENDAST LYSSNA
 ConnectionsToadlet.nodeStatus.LISTENING=LYSSNAR
 ConnectionsToadlet.nodeStatus.BURSTING=BURSTING
-ConnectionsToadlet.nodeStatus.CLOCK PROBLEM=KLOCK PROBLEM
-ConnectionsToadlet.nodeStatus.CONNECTION ERROR=ANSLUTNINGS FEL
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=KLOCK PROBLEM
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=ANSLUTNINGS FEL
 ConnectionsToadlet.nodeStatus.DISCONNECTING=KOPPLAR NER
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=OKÄND STATUS
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=OKÄND STATUS
 ConnectionsToadlet.nodeStatus.BUSY=UPPTAGEN
-ConnectionsToadlet.nodeStatus.ROUTING DISABLED=NOT ROUTING TRAFFIC
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=NOT ROUTING TRAFFIC
 ContentDataFilter.unknownCharset=Sidan som ska visas använder en okänd teckenuppsättning och kommer därför inte att kunna filtreras, detta kan äventyra din anonymitet.
 ContentDataFilter.unknownCharsetTitle=Okänd teckenuppsättning!
 ContentDataFilter.warningUnknownCharsetTitle=Varning: Okänd teckenuppsättning (${charset})
