Make using the new splitfile code configurable for transient requests.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1236,6 +1236,7 @@ NodeClientCore.useAIMDsRT=Use AIMDs for real-time requests? (EXPERTS ONLY)
 NodeClientCore.useAIMDsRTLong=Enable originator-level throttling of request starters based on TCP-style Additive Increase Multiplicative Decrease rate estimation (for realtime requests). This enables or disables a key part of the old load management system. EXPERTS ONLY!!!
 NodeClientCore.useAIMDsBulk=Use AIMDs for bulk requests? (EXPERTS ONLY)
 NodeClientCore.useAIMDsBulkLong=Enable originator-level throttling of request starters based on TCP-style Additive Increase Multiplicative Decrease rate estimation (for bulk requests). This enables or disables a key part of the old load management system. EXPERTS ONLY!!!
+NodeClientCore.useNewSplitfileCodeTransient=Enable new (single file) splitfile code for transient requests?
 NodeIPDectector.inclLocalAddress=Include local addresses in noderef
 NodeIPDectector.inclLocalAddressLong=Whether to include local addresses (LAN and localhost) in node references. This will not be useful unless the both sides set allowLocalAddresses=true for the respective references (use the Friends page in advanced mode to set this flag).
 NodeIPDectector.ipOverride=IP address override
