Add new FetchException: Not enough disk space.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -764,6 +764,7 @@ FetchException.longError.33=The data is of a type known to be dangerous, so the 
 FetchException.longError.34=The hashes in the metadata do not match the actual data. The data may have been corrupted during download, or it may have been broken when it was inserted for example if the node inserting was broken or the data changed on disk mid-insert.
 FetchException.longError.35=Splitfile decoding produced a data block that wasn't in the original list of keys. It is likely that the insert was corrupted, but it is possible that this is a bug or hardware failure on your computer.
 FetchException.longError.36=The file claims to have a safe MIME type but is being downloaded to disk with a file extension not compatible with that type. For example, "virus.exe" claiming to be a text file would trigger this error. This might just be a bad filename, but it might be a malicious file trying to get past the content filter.
+FetchException.longError.37=There is not enough disk space to start a download or to start the next stage of a download. Please free up some disk space and restart the request.
 FetchException.longError.3=Don't know what to do with metadata
 FetchException.longError.4=Failed to parse metadata
 FetchException.longError.5=Failure in extracting files from an archive
@@ -800,6 +801,7 @@ FetchException.shortError.33=Content filter encountered dangerous type
 FetchException.shortError.34=Content does not match hashes in metadata
 FetchException.shortError.35=Splitfile decode error
 FetchException.shortError.36=Filename doesn't match MIME type for filtered download to disk
+FetchException.shortError.36=Not enough disk space
 FetchException.shortError.3=Unknown metadata
 FetchException.shortError.4=Invalid metadata
 FetchException.shortError.5=Archive failure
