--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1218,6 +1218,10 @@ NodeClientCore.fileForClientStatsLong=File to store client throttling statistics
 NodeClientCore.maxUSKFetchers=Maximum number of temporary  USK fetchers
 NodeClientCore.maxUSKFetchersLong=Maximum number of temporary background fetches for recently visited USKs (e.g. freesites). Note that clients and plugins (e.g. WebOfTrust) can subscribe to USKs, which does not count towards the limit.
 NodeClientCore.maxUSKFetchersMustBeGreaterThanZero=Must be greater than zero
+NodeClientCore.minDiskFreeLongTerm=Minimum free disk space 
+NodeClientCore.minDiskFreeLongTermLong=Minimum amount of free disk space over the long term, e.g. when starting a download or the next stage of a download.
+NodeClientCore.minDiskFreeShortTerm=Minimum free disk space during decode 
+NodeClientCore.minDiskFreeShortTermLong=Minimum free disk space over a brief period, when doing disk-intensive but short-lived operations such as finishing a download. We recommend that this is smaller than the long-term limit.
 NodeClientCore.movingTempDirOnTheFlyNotSupported=Moving temp directory on the fly not supported at present
 NodeClientCore.persistentTempDir=Persistent temp files directory
 NodeClientCore.persistentTempDirLong=Path of directory to put persistent temp files in. Persistent means that this should be kept even when Freenet is not running.
