Add an alert for out of disk space.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -452,6 +452,13 @@ DarknetConnectionsToadlet.numOfResults=Number of results
 DarknetConnectionsToadlet.visibilityTitle=Visible to friends?
 DarknetConnectionsToadlet.visibilityMessageSimple=Is this friend visible to our other friends? (We use the stricter of our setting and theirs, see more in advanced mode)
 DarknetConnectionsToadlet.visibilityMessageAdvanced=Is this friend visible to our other friends? (We use the stricter of our setting and theirs, theirs is in brackets)
+DiskSpaceUserAlert.title=Please free up some disk space!
+DiskSpaceUserAlert.notEnoughSpaceIn=There is not enough free space available in ${where}.
+DiskSpaceUserAlert.action=Please delete or move some files. Alternatively you can change the disk space limit on the Configuration page ("Minimum free disk space" etc under Core Settings in advanced mode).
+DiskSpaceUserAlert.explanation.OK=
+DiskSpaceUserAlert.explanation.PERSISTENT=Starting new downloads will not work until you free up some disk space.
+DiskSpaceUserAlert.explanation.TRANSIENT=Browsing Freenet, starting new downloads etc will not work reliably until you free up some disk space.
+DiskSpaceUserAlert.explanation.PERSISTENT_COMPLETION=Completing downloads will not work until you free up some disk space.
 DownloadFeedUserAlert.delete=Delete
 DownloadFeedUserAlert.fileDescription=Description:
 DownloadFeedUserAlert.fileURI=URI:
