Add a specific error for the 64TB limit.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -921,6 +921,7 @@ InsertException.longError.10=Cancelled by user
 InsertException.longError.11=Meta string (most likely a '/') used in the URI
 InsertException.longError.12=Binary blob format error
 InsertException.longError.13=Too many files in a single folder on a freesite insert
+InsertException.longError.14=Uploading files larger than 64TB not supported at present
 InsertException.longError.1=Caller supplied a URI we cannot use
 InsertException.longError.2=Internal bucket error: out of disk space/permissions problem?
 InsertException.longError.3=Internal error
@@ -934,6 +935,7 @@ InsertException.shortError.10=Cancelled
 InsertException.shortError.11=Meta string used in the key
 InsertException.shortError.12=Binary blob format error
 InsertException.shortError.13=Too many files in a single folder
+InsertException.shortError.14=File is too large
 InsertException.shortError.1=Invalid URI
 InsertException.shortError.2=Temp files error
 InsertException.shortError.3=Internal error
