Make memory usage for FEC configurable too.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1227,6 +1227,10 @@ NodeClientCore.fileForClientStatsLong=File to store client throttling statistics
 NodeClientCore.maxUSKFetchers=Maximum number of temporary  USK fetchers
 NodeClientCore.maxUSKFetchersLong=Maximum number of temporary background fetches for recently visited USKs (e.g. freesites). Note that clients and plugins (e.g. WebOfTrust) can subscribe to USKs, which does not count towards the limit.
 NodeClientCore.maxUSKFetchersMustBeGreaterThanZero=Must be greater than zero
+NodeClientCore.memoryLimitedJobThreadLimit=Max FEC threads
+NodeClientCore.memoryLimitedJobThreadLimitLong=Maximum number of threads used for memory-intensive operations such as FEC decoding/encoding.
+NodeClientCore.memoryLimitedJobMemoryLimit=Max memory used for FEC threads
+NodeClientCore.memoryLimitedJobMemoryLimitLong=Maximum amount of memory used for memory-intensive operations such as FEC decoding/encoding.
 NodeClientCore.minDiskFreeLongTerm=Minimum free disk space 
 NodeClientCore.minDiskFreeLongTermLong=Minimum amount of free disk space over the long term, e.g. when starting a download or the next stage of a download.
 NodeClientCore.minDiskFreeShortTerm=Minimum free disk space during decode 
